Scan accuracy increased --better prompted to micro agents and some listed UI fices
